--- a/index.qmd
+++ b/index.qmd
@@ -1,11 +1,26 @@
----
-title: "wma"
----
+# Welcome {.unnumbered}
 
-This is a Quarto website.
+This is the website for "Web Mapping and Analysis" for the module **ENVS456** at the University of Liverpool. This is a course designed and delivered by Dr. Elisabetta Pietrostefani and Professor Dani Arribas-Bel from the Geographic Data Science Lab at the University of Liverpool, United Kingdom. You will learn **BLAH BLAH BLAH**
 
-To learn more about Quarto websites visit <https://quarto.org/docs/websites>.
+The website is **free to use** and is licensed under the [Attribution-NonCommercial-NoDerivatives 4.0 International](https://creativecommons.org/licenses/by-nc-nd/4.0/). A compilation of this web course is hosted as a GitHub repository that you can access:
 
-```{r}
-1 + 1
-```
+* As a [download](https://github.com/fcorowe/r4ps/archive/refs/heads/main.zip) of a `.zip` file that contains all the materials.
+* As an [html website](https://gdsl-ul.github.io/wma).
+* As a [pdf document](https://gdsl-ul.github.io/wma.pdf)
+* As a [GitHub repository](https://github.com/GDSL-UL/wma).
+
+## Contact {-}
+
+> Dani Arribas-Bel - darribas [at] liverpool.ac.uk
+Lecturer in Geographic Data Science
+Office 6xx, Roxby Building,
+University of Liverpool - 74 Bedford St S,
+Liverpool, L69 7ZT,
+United Kingdom.
+
+> Elisabetta Pietrostefani - e.pietrostefani [at] liverpool.ac.uk
+Lecturer in Geographic Data Science
+Office 6xx, Roxby Building,
+University of Liverpool - 74 Bedford St S,
+Liverpool, L69 7ZT,
+United Kingdom.
