--- a/apis.qmd
+++ b/apis.qmd
@@ -1,8 +1,27 @@
 # Overview
 
-Block 4 Data Backends III - 20 Feb - Elisabetta
-* Lecture: APIs
-* Lab 4: Acquiring data from the web (advanced API stuff), More interesting on APIs in geo. Get to something a bit more interesting. 
+Block 4 Data Backends III - 20 Feb - Elisabetta \* Lecture: APIs \* Lab 4: Acquiring data from the web (advanced API stuff), More interesting on APIs in geo. Get to something a bit more interesting.
 
-—> Could probably be expanded into 2 sessions I think, but not sure I will have time to do this this year, but definitely next year. 
-Assignment: Block 
+---\> Could probably be expanded into 2 sessions I think, but not sure I will have time to do this this year, but definitely next year. Assignment: Block
+
+Lecture: APIs
+Lab: Acquiring data from the web
+
+Block 4
+Data Backends III
+
+Lecture: APIs
+Slides:
+
+HTML
+PDF
+References:
+
+Arribas-Bel, D. (2014) “Accidental, Open and Everywhere: Emerging Data Sources for the Understanding of Cities”. Applied Geography, 49: 45-53.
+Goodchild, M. F. (2007). Citizens as sensors: the world of volunteered geography. GeoJournal, 69(4), 211-221.
+Lazer, D., & Radford, J. (2017). Data ex machina: introduction to big data. Annual Review of Sociology, 43, 19-39.
+Lab: Acquiring data from the web
+Notes:
+
+HTML
+PDF
