--- a/dataarch.qmd
+++ b/dataarch.qmd
@@ -1,5 +1,27 @@
 # Overview
 
-Block 3 Data Backends II - 13 Feb - Elisabetta
-* Lecture: Data architectures & formats
-* Lab 3: Creating, manipulating, and integrating web geospatial data bit more on APIs (webtiles) specific examples. Add Tiles
+Block 3 Data Backends II - 13 Feb - Elisabetta \* Lecture: Data architectures & formats \* Lab 3: Creating, manipulating, and integrating web geospatial data bit more on APIs (webtiles) specific examples. Add Tiles
+
+Lecture: Data architechtures & formats
+Lab: Creating, manipulating, and integrating web geospatial data
+
+Block 3
+Data Backends II
+
+Lecture: Data architechtures & formats
+Slides:
+
+HTML
+PDF
+References:
+
+Chapter 3 of the GDS book (in progress) covers traditional and more modern approaches to represent Geography as data.
+Kitchin, R. (2014). The data revolution: Big data, open data, data infrastructures and their consequences. Sage.
+Maptiler documents on map tiles and map vector tiles.
+Lab: Creating, manipulating, and integrating web geospatial data
+Notes:
+
+HTML
+PDF
+Other
+R’s sf cheatsheet is a good reference for manipulation operations/spatial predicates with simple features (see also a similar list in Python’s geopandas)
