--- a/webarch.qmd
+++ b/webarch.qmd
@@ -1,5 +1,25 @@
 # Overview
 
-Block 2 Data Backends I - 6 Feb - Dani
-* Lecture: The Web’s architecture and Economy
-* Lab 2: Non-spatial APIs - tidycensus - TO DO! Unpacking what that function is doing. What the API is actually doing? Wanted to understand - abstracts everything away. Unpack. REST type of API. Function web address. DO THIS! 
+Block 2 Data Backends I - 6 Feb - Dani \* Lecture: The Web's architecture and Economy \* Lab 2: Non-spatial APIs - tidycensus - TO DO! Unpacking what that function is doing. What the API is actually doing? Wanted to understand - abstracts everything away. Unpack. REST type of API. Function web address. DO THIS!
+
+Lecture: The Web’s architecture and Economy
+Lab: Powerful examples
+
+Block 2
+Data Backends I
+
+Lecture: The Web’s architecture and Economy
+Slides:
+
+HTML
+PDF
+References:
+
+Brief History of the Internet, by the Internet Society, is a handy (and free!) introduction to how it all came to be.
+Haklay, M., Singleton, A., Parker, C. “Web Mapping 2.0: The Neogeography of the GeoWeb”. Geography Compass, 2(6):2011–2039
+A blog post from Joe Morrison commenting on the recent change of licensing for some of the core software from Mapbox [URL]
+Lab: Powerful examples
+Notes:
+
+HTML
+PDF
