--- a/webarch.qmd
+++ b/webarch.qmd
@@ -1,9 +1,14 @@
-# Overview
+# Web architecture
 
-Block 2 Data Backends I - 6 Feb - Dani \* Lecture: The Web's architecture and Economy \* Lab 2: Non-spatial APIs - tidycensus - TO DO! Unpacking what that function is doing. What the API is actually doing? Wanted to understand - abstracts everything away. Unpack. REST type of API. Function web address. DO THIS!
+-   Block 2 - Data Backends I (Dani)
 
-Lecture: The Web’s architecture and Economy
-Lab: Powerful examples
+    -   Lecture: The Web's architecture and Economy
+
+    -   Lab: Non-spatial APIs - What do APIs actually do?
+    
+Lecture: The Web's architecture and Economy 
+Lab 2: Non-spatial APIs - tidycensus - TO DO! Unpacking what that function is doing. What the API is actually doing? Wanted to understand - abstracts everything away. Unpack. REST type of API. Function web address. DO THIS!
+
 
 Block 2
 Data Backends I
