--- a/dashboards.qmd
+++ b/dashboards.qmd
@@ -1,9 +1,19 @@
 # Dashboards
 
--   Block 9 - Dashboards (Dani)
+Dani Arribas-Bel
 
-    -   Lecture: Dashboards: bringing analysis to the web
+**Lecture**: Dashboards: bringing analysis to the web
 
-    -   Lab: Building Dashboards (Shiny)
+**Lab**: Building Dashboards (Shiny)
 
-—> Co-develop it (Shiny)  
+## Lecture
+
+Slides can be downloaded [here](https://github.com/GDSL-UL/wma/raw/main/pdf/lecture_08.pdf)
+
+## Lab: 
+
+
+
+
+## References
+
