--- a/choro.qmd
+++ b/choro.qmd
@@ -1,7 +1,19 @@
 # Statistical visualisation
 
-Block 8 - Frontend Topics III - 20 March - Dani
-* Lecture: Statistical visualisation
-* Lab: Choropleths in CARTO - Kepler
+Dani Arribas-Bel
 
+**Lecture**: Statistical visualisation
+
+**Lab**: Choropleths in Kepler - Kepler
 —> Interactivity with Mapbox ? Not sure need to investigate this further
+
+## Lecture
+
+Slides can be downloaded [here](https://github.com/GDSL-UL/wma/raw/main/pdf/lecture_08.pdf)
+
+## Lab: 
+
+
+
+
+## References
